# MeLi-Binary-Classification-Challenge

./: .gitignore  README.md  environment.yml  pyproject.toml
app/: Notebook.ipynb  init.py
data/: Data_transformed.parquet.gzip  X_test_transformed.parquet.gzip  X_train_transformed.parquet.gzip  y_test.parquet.gzip  y_train.parquet.gzip
mlflow_experiments/: cv_results.csv  estimator.html
mlflow_experiments/model/: conda.yaml  requirements.txt
mlflow_experiments/model/metadata/: MLmodel
